add(resources.astro):增加了寄语

--- a/src/pages/Resources.astro
+++ b/src/pages/Resources.astro
@@ -98,6 +98,19 @@ import FriendCard from "@/components/mdx/FriendCard.astro";
           />
         </div>
       </section> -->
+          <div class="text-lg text-base-content/70 leading-loose text-center italic">
+            每次告别，都是另一次相遇的伏笔。<br>
+            愿之后的十年，二十年，君都风雨无阻，笑看江湖。<br>
+            愿这不是我们的最后一次相见。<br><br>
+            <span class="not-italic text-base-content/60">
+              Every farewell is a prelude to another reunion.<br>
+              May the next ten or twenty years find you fearless in the storm, smiling at the world.<br>
+              May this not be our last meeting.
+            </span>
+          </div>
+          
+          <hr class="my-8 border-t border-base-content/20" />
+
 
       <!-- Useful Resources Section -->
       <section>
